--- a/style.css
+++ b/style.css
@@ -50,11 +50,11 @@ path, i, svg {
     width: 80%;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
-    /* pointer-events: none;
-    opacity: 0; */
+    pointer-events: none;
+    opacity: 0; 
     
     /* Adding adjustment class */
-    /* transform: translateY(100px); */
+    transform: translateY(100px);
     transition: all 0.5s ease-in-out;
 }
 
