--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ path, i, svg {
     pointer-events: all;
 }
 
-.sliders button {
+.sliders button,
+.close-save,
+.close-library {
     position: absolute;
     top: 0;
     right: 0;
@@ -76,6 +78,23 @@ path, i, svg {
     color: white;
     cursor: pointer;
     font-weight: bold;
+}
+
+.close-save,
+.close-library {
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    padding: 1rem;
+}
+
+.submit-save {
+    margin: 2rem;
+    padding: 1rem 3rem;
+    background: rgb(112, 112, 131);
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
 }
 
 .controls {
@@ -131,7 +150,7 @@ input[type="range"] {
 
 /* Copy Pop Up Code */
 
-.copy-container {
+.copy-container, .save-container, .library-container {
     position: fixed;
     top: 0%;
     left: 0%;
@@ -146,7 +165,7 @@ input[type="range"] {
     transition: all 0.5s ease-in-out;
 }
 
-.copy-popup {
+.copy-popup, .save-popup, .library-popup {
     min-width: 30%;
     min-height: 30vh;
     background: white;
@@ -159,16 +178,25 @@ input[type="range"] {
     transform: translateY(-2rem);
 }
 
-.copy-popup h4 {
+.copy-popup h4, .save-popup h4, .library-popup h4 {
     font-size: 2rem;
     padding: 2rem;
 }
 
-.copy-container.active {
+.copy-container.active,
+.save-container.active,
+.library-container.active {
     opacity: 1;
     pointer-events: all;
 }
 
-.copy-popup.active {
+.copy-popup.active,
+.save-popup.active,
+.library-popup.active {
     transform: translateY(0);
+}
+
+.save-name {
+    font-size: 1.5rem;
+    padding: 1rem;
 }
